--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.2",
+        "opcodesio/log-viewer": "^2.5",
         "spatie/laravel-permission": "^5.10",
         "symfony/http-client": "^6.3",
         "symfony/mailgun-mailer": "^6.3"
