--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "opcodesio/log-viewer": "^2.5",
         "spatie/laravel-permission": "^5.10",
         "symfony/http-client": "^6.3",
-        "symfony/mailgun-mailer": "^6.3"
+        "symfony/mailgun-mailer": "^6.3",
+        "twbs/bootstrap-icons": "^1.10"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
