--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "cesargb/laravel-magiclink": "^2.18",
         "doctrine/dbal": "^3.6",
         "guzzlehttp/guzzle": "^7.2",
+        "intervention/image": "^2.7",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
